[package]
name = "feedfilter"
version = "0.1.0"
edition = "2021"
authors = [ "Manuel Hutter (https://github.com/mhutter)" ]
repository = "https://github.com/mhutter/feedfilter"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
axum-extra = { version = "0.9", features = ["form"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rss = { version = "2.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "signal"] }

[profile.release]
# Enable all optimizations
opt-level = 3
# Disable all debug-info
debug = "none"
# Strip symbols & debuginfo
strip = "symbols"
# Enable Link-Time Optimizations
lto = "fat"
# Allow more aggressive optimizations
codegen-units = 1
# 
